[package]
name = "refinery"
version = "0.1.1"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
readme = "README.md"
license = "MIT/Apache-2.0"
description = "A crate for computing partitions of a set."
repository = "https://github.com/jneem/refinery"
documentation = "http://jneem.github.io/refinery"

